🚚 채팅 시작 화면단 css, js 코드 분리

--- a/src/main/resources/static/start-chat.html
+++ b/src/main/resources/static/start-chat.html
@@ -3,66 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>1:1 채팅</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background-color: #f0f0f0;
-      }
-      .container {
-        text-align: center;
-        background-color: white;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-      }
-      button {
-        padding: 10px 20px;
-        background-color: #007bff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
-      }
-      button:hover {
-        background-color: #0056b3;
-      }
-    </style>
+    <title>1:1 채팅 시작 버튼</title>
+    <script src="./js/chat/start-chat.js" defer></script>
+    <link rel="stylesheet" href="./css/chat/start-chat.css" />
   </head>
   <body>
     <div class="container">
       <h1>1:1 채팅하기</h1>
-      <p>채팅할 상대방을 선택하고 버튼을 눌러 1:1 채팅을 시작하세요.</p>
+      <p>크리에이터에게 문의사항을 물어보세요!</p>
       <button onclick="startChat()">1:1 채팅하기</button>
     </div>
-
-    <script>
-      function startChat() {
-        // 여기에 채팅방 생성 및 이동 로직을 추가합니다.
-        alert("1:1 채팅방으로 이동합니다.");
-        // 예시로 페이지 이동
-        window.location.href = "chat.html"; // 실제 채팅방 경로로 변경
-
-        fetch("http://localhost:8083/chat/room", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify(chatRoomDTO),
-        })
-          .then((response) => response.json())
-          .then((data) => {
-            console.log("Success:", data);
-          })
-          .catch((error) => {
-            console.error("Error:", error);
-          });
-      }
-    </script>
   </body>
 </html>
